[metadata]
name = instack
summary = instack
description-file =
    README.md
author = James Slagle
author-email = jslagle@redhat.com
home-page = http://www.redhat.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    instack

[entry_points]
console_scripts =
    instack = instack.main:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = instack/locale
domain = instack

[update_catalog]
domain = instack
output_dir = instack/locale
input_file = instack/locale/instack.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = instack/locale/instack.pot
